[package]
name = "mycelium-spore"
version.workspace = true
description = "spore — packaging & publishing (M-368; ADR-013): builds a content-addressed deployable `spore` from a `mycelium-proj.toml` project. Identity is the content-addressed DAG (code-by-hash + dependency edges + surface); metadata (version/authors/…) is NOT identity (ADR-003). A missing/ambiguous publish input is an explicit error, never a guess (G2). KC-3 — above the kernel; no new dependency."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# The manifest layer (M-359) + the kernel content-address type (ADR-003) + the workspace-pinned hasher.
# No NEW external dependency: blake3 is already a vetted workspace dependency (mycelium-core, -lsp).
mycelium-proj = { git = "https://github.com/tzervas/mycelium-proj", rev = "20b8a6d264ac728e81cfe8cd90cec8d2a91370be" }
mycelium-core = { git = "https://github.com/tzervas/mycelium-core", rev = "46d2515cbd86d2ae4d1365f4adcd2796737e9f0b" }
blake3.workspace = true

[dev-dependencies]
# Property-based testing for the registry hash-verification bound (M-732 DoD). Same major as the
# rest of the workspace (mycelium-numerics et al.); dev-only — no runtime dependency added (KC-3).
proptest = "1"

[[bin]]
name = "spore"
path = "src/bin/spore.rs"

# --- standalone workspace root (course-correction Phase B, 2026-07-18; steer handoff §6.2) ---
[workspace]

[workspace.package]
version = "0.464.0"
edition = "2021"
rust-version = "1.96.1"
license = "MIT"
repository = "https://github.com/tzervas/mycelium-spore"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"

[workspace.lints.rust]
# ADR-014: unsafe permitted-but-documented; the check is clippy::undocumented_unsafe_blocks.
unsafe_code = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"

# G2 never-silent arithmetic: release builds panic on overflow (monorepo parity).
[profile.release]
overflow-checks = true
